# flight-price-alert

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: flight-price-alert.yml  flight-tracker.yml
config/: queries.yaml
src/flight_price_alert/: __init__.py  __main__.py  cli.py  config.py  emailer.py  filtering.py  planner.py  reporting.py  runner.py  state.py
src/flight_price_alert/providers/: __init__.py  amadeus.py  base.py
src/flight_tracker/: __main__.py  cli.py  config.py  filtering.py  models.py  planner.py  reporting.py  runner.py  state.py
src/flight_tracker/providers/: __init__.py  amadeus.py  base.py
